Implements Product entity, service and repository layers